# ccx

./: .gitignore  .mcp.json  README.md  SETUP.md  base-context.example.yaml  pyproject.toml
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json  mcp.json  plugin.json
.claude-plugin/hooks/: hooks.json  log_event.sh
.claude-plugin/skills/analyze/: SKILL.md
.claude-plugin/skills/index/: SKILL.md
.claude-plugin/skills/run/: SKILL.md
.claude/hooks/: log_event.py  log_event.sh
agents/: _protocol.md  analyzer.md  clarifier.md  implementer.md  module-analyzer.md  package-synthesizer.md  planner.md  researcher.md  reviewer.md
hooks/: ensure_settings.py  ensure_settings.sh  hooks.json  log_event.py  log_event.sh  notify_macos.py  notify_macos.sh  validate_schema.py  validate_schema.sh
skills/analyze/: SKILL.md
skills/commit/: SKILL.md
skills/compact/: SKILL.md
skills/index/: SKILL.md
skills/review/: SKILL.md
skills/run/: PIPELINE.md  SKILL.md
src/ccx/: __init__.py  __main__.py  _transcript_utils.py  agent_config.py  analysis_cache.py  base-context.example.yaml  cli.py  compactor.py  config.py  context_tracker.py  dashboard.py  logger.py  mcp_server.py  scanner.py  session.py  storage.py  token_tracker.py
src/ccx/skills/analyze/: SKILL.md
src/ccx/skills/commit/: SKILL.md
src/ccx/skills/index/: SKILL.md
src/ccx/skills/resolve/: SKILL.md
src/ccx/skills/review/: SKILL.md
src/ccx/skills/run/: PIPELINE.md  SKILL.md
src/llmanager/: __init__.py  __main__.py  cli.py  config.py  mcp_server.py  session.py
src/llmanager/skills/analyze/: SKILL.md
src/llmanager/skills/commit/: SKILL.md
src/llmanager/skills/review/: SKILL.md
src/llmanager/skills/run/: PIPELINE.md  SKILL.md
